core/unpackaged/main/default/objects/ZVC__Zoom_Product_Set_Up__c/ZVC__Zoom_Product_Set_Up__c.object-meta.xml
<CustomObject>
    <label>Zoom Product Set Up</label>
    <nameField>
        <label>Zoom Product Set Up Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zoom Product Set Up</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>