core/unpackaged/main/default/objects/ZVC__Zoom_Product_Set_Up__c/fields/ZVC__Done_Status__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Done_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Done Status</label>
    <type>Checkbox</type>
</CustomField>