core/unpackaged/main/default/objects/ZVC__Zoom_Product_Set_Up__c/fields/ZVC__Product_Name__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Product_Name__c</fullName>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>