core/unpackaged/main/default/objects/ZVC__Zoom_Product_Set_Up__c/fields/ZVC__Step_Order__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Step_Order__c</fullName>
    <label>Step Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>